# my_mcp_servers

./: LICENSE  MILESTONES.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/prompts/: generic_frequently_used.prompt.md  operations.prompt.md  recap.prompt.md  review_milestones.prompt.md
config/: mcp_servers.toml
config/vscode/: .mcp.json  settings.json
docs/: architecture.md  markitdown.md  operations.md
scripts/: __init__.py  run_markitdown.py  run_server.py  setup_env.ps1
servers/: __init__.py
servers/markitdown/: __init__.py  app.py  config.toml
servers/other_server_template/: __init__.py  app.py  config.toml
tests/: test_health_endpoints.py
