[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my-mcp-servers"
version = "0.1.0"
description = "Reusable Model Context Protocol server toolkit with MarkItDown MCP launcher."
readme = "README.md"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.11"
dependencies = [
  "markitdown-mcp>=0.0.1a4",
  "markitdown>=0.0.5",
  "mcp>=0.1.1",
  "typer>=0.9.0",
  "rich>=13.7.0",
  "pydantic>=2.6.4",
  "tomli>=2.0.1; python_version < '3.11'",
  "tomli-w>=1.0.0"
]
keywords = ["mcp", "markitdown", "model-context-protocol", "copilot"]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.4.2"
]

[project.scripts]
run-markitdown = "scripts.run_markitdown:app"
run-mcp-server = "scripts.run_server:app"

[tool.setuptools.packages.find]
include = ["servers*", "scripts*"]

[tool.setuptools.package-data]
"servers.markitdown" = ["config.toml"]
"servers.other_server_template" = ["config.toml"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
